// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcMainContainer should not display the titleIntro when title is not given 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-flex tw-justify-between"
  >
    <div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <p
    class="ec-main-container__title-intro"
    data-test="ec-main-container__title-intro"
  >
    Here you will be able to keep track of all your requests to Ebury and your credit line.
  </p>
  <!--v-if-->
  
  
</div>
`;

exports[`EcMainContainer should render both titles when they are given in props 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-flex tw-justify-between"
  >
    <div>
      <!--v-if-->
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
    </div>
    <!--v-if-->
  </div>
  <p
    class="ec-main-container__title-intro"
    data-test="ec-main-container__title-intro"
  >
    Here you will be able to keep track of all your requests to Ebury and your credit line.
  </p>
  <!--v-if-->
  
  
</div>
`;

exports[`EcMainContainer should render empty if no props were given 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-flex tw-justify-between"
  >
    <div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  
  
</div>
`;

exports[`EcMainContainer should render without title intro when the titleIntro prop is not given 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-flex tw-justify-between"
  >
    <div>
      <!--v-if-->
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
  <!--v-if-->
  
  
</div>
`;

exports[`EcMainContainer should use given slot 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-flex tw-justify-between"
  >
    <div>
      <!--v-if-->
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
    </div>
    <!--v-if-->
  </div>
  <p
    class="ec-main-container__title-intro"
    data-test="ec-main-container__title-intro"
  >
    Here you will be able to keep track of all your requests to Ebury and your credit line.
  </p>
  <!--v-if-->
  
  <p>
    Random text
  </p>
  
</div>
`;

exports[`EcMainContainer should use the given named breadcrumbs slot 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-flex tw-justify-between"
  >
    <div>
      <div
        class="ec-main-container__breadcrumbs"
        data-test="ec-main-container__breadcrumbs"
      >
        
        <a
          href="#"
        >
          Breadcrumbs
        </a>
        
      </div>
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
    </div>
    <!--v-if-->
  </div>
  <p
    class="ec-main-container__title-intro"
    data-test="ec-main-container__title-intro"
  >
    Here you will be able to keep track of all your requests to Ebury and your credit line.
  </p>
  <!--v-if-->
  
  
</div>
`;

exports[`EcMainContainer should use the given named cta slot 1`] = `
<div
  class="ec-main-container"
  data-test="ec-main-container"
>
  <div
    class="tw-flex tw-justify-between"
  >
    <div>
      <!--v-if-->
      <h1
        class="ec-main-container__title"
        data-test="ec-main-container__title"
      >
        Trade Finance
      </h1>
    </div>
    <div
      data-test="ec-main-container__cta"
    >
      
      <button
        class="ec-btn ec-btn--rounded ec-btn--primary ec-btn--md ec-btn--full-width"
      >
        Test cta
      </button>
      
    </div>
  </div>
  <p
    class="ec-main-container__title-intro"
    data-test="ec-main-container__title-intro"
  >
    Here you will be able to keep track of all your requests to Ebury and your credit line.
  </p>
  <!--v-if-->
  
  
</div>
`;
